--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
     "typescript.tsc.autoDetect": "off",
     "robloxLsp.diagnostics.globals": [
-        "WebSocket"
+        "WebSocket",
+        "ImGui_new"
     ]
 }
